[package]
name = "probor"
version = "0.1.3"
authors = ["Paul Colomiets <paul@colomiets.name>"]
license = "MIT"
repository = "https://github.com/tailhook/probor"
description = """
    A (prototype of) serialization protocol on top of CBOR that provides
    protobuf-like functionality
"""

[dependencies]
cbor-codec = "0.4.2"
byteorder = "0.4.2"

[dependencies.regex]
version = "0.1.44"
optional = true

[features]
regex_serde = ["regex"]

[lib]
name = "probor"
path = "src/lib.rs"
