[package]
name = "probor"
version = "0.2.0"
authors = ["Paul Colomiets <paul@colomiets.name>"]
license = "MIT"
repository = "https://github.com/tailhook/probor"
description = """
    A (prototype of) serialization protocol on top of CBOR that provides
    protobuf-like functionality
"""

[dependencies]
cbor-codec = "0.5.0"
byteorder = "0.5.0"

[dependencies.regex]
version = "0.1.44"
optional = true

[features]
regex_serde = ["regex"]

[lib]
name = "probor"
path = "src/lib.rs"
