[package]
name = "probor"
version = "0.3.0"
authors = ["Paul Colomiets <paul@colomiets.name>"]
license = "MIT"
repository = "https://github.com/tailhook/probor"
description = """
    A (prototype of) serialization protocol on top of CBOR that provides
    protobuf-like functionality
"""

[dependencies]
cbor-codec = "0.7.1"
byteorder = "1.0.0"

[dependencies.regex]
version = "0.2.1"
optional = true

[features]
regex_serde = ["regex"]

[lib]
name = "probor"
path = "src/lib.rs"
